@@ -1,10 +1,10 @@
 package util;
 
 // START:loader
+
 import java.io.BufferedReader;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class TsvLoader {
    // START_HIGHLIGHT
@@ -13,7 +13,7 @@ public class TsvLoader {
       return reader.lines()
          .map(row -> row.split("\t"))
          .map(Arrays::asList)
-         .collect(Collectors.toList());
+         .toList();
    }
 }
 // END:loader
